--- a/Dockerfile.fetcher
+++ b/Dockerfile.fetcher
@@ -5,7 +5,7 @@ ENV NODE_ENV=production
 COPY package.json package-lock.json ./
 COPY apps/*/package.json apps/*/
 COPY packages/*/package.json packages/*/
-RUN npm ci
+RUN npm install
 
 COPY . .
 CMD ["npm", "run", "scheduler", "-w", "@netk/market-fetcher"]
